1. 앱 진입 스플래시 화면 구현 2. 임시 HomeFragment 추가 (자동 생성됨)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.github.bumptech.glide:compiler:4.10.0"
     kapt "com.google.dagger:hilt-android-compiler:2.31.2-alpha"
     implementation "androidx.appcompat:appcompat:1.2.0"
