--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Muyaho">
-        <activity android:name=".LaunchSplashActivity"
+        <activity android:name=".SplashActivity"
             android:theme="@style/LaunchSplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
