--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,7 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+# custom
+.idea/codeStyles/Project.xml
+.idea/codeStyles/codeStyleConfig.xml
