AddStockActivity 추가 AddStockSelectTypeFragment 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".addstock.AddStockActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
