--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
 dependencies {
     kapt "com.github.bumptech.glide:compiler:4.10.0"
     kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
+    kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.core:core-ktx:1.3.2"
@@ -68,6 +69,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.dagger:hilt-android:2.33-beta"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
