--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MuyahoAndroid">
+        android:theme="@style/Theme.MuyahoAndroid"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +24,9 @@
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.depromeet.muyaho.ui.addstock.AddStockActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.addstock.AddStockActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
