닉네임 설정화면 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
         <activity
             android:name=".ui.sign.SignActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".my.NicknameActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
