--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.github.angads25:toggle:1.1.0'
 
     implementation "com.kakao.sdk:v2-user:2.5.0" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.5.1" // 친구, 메시지(카카오톡)
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
