--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation "androidx.room:room-ktx:2.3.0"
     implementation 'com.github.angads25:toggle:1.1.0'
 
+    implementation 'com.airbnb.android:lottie:3.7.0'
+
     implementation "com.kakao.sdk:v2-user:2.5.0" // 카카오 로그인
     implementation "com.kakao.sdk:v2-talk:2.5.1" // 친구, 메시지(카카오톡)
 
